// Vitest Snapshot v1

exports[`Pull Request Object > get metadata() 1`] = `
_Metadata {
  "_commentID": undefined,
  "_tag": undefined,
  "issueNumber": 0,
}
`;

exports[`Pull Request Object > get metadata() 2`] = `
_Metadata {
  "_commentID": undefined,
  "_tag": "v1",
  "issueNumber": 0,
}
`;

exports[`Pull Request Object > get metadata() 3`] = `
_Metadata {
  "_commentID": "123456789",
  "_tag": undefined,
  "issueNumber": 0,
}
`;

exports[`Pull Request Object > get metadata() 4`] = `
_Metadata {
  "_commentID": "123456789",
  "_tag": "v1",
  "issueNumber": 0,
}
`;

exports[`Pull Request Object > get metadata() 5`] = `
_Metadata {
  "_commentID": undefined,
  "_tag": "alpha",
  "issueNumber": 0,
}
`;

exports[`Pull Request Object > get metadata() 6`] = `
_Metadata {
  "_commentID": undefined,
  "_tag": "beta",
  "issueNumber": 0,
}
`;

exports[`Pull Request Object > get metadata() 7`] = `
_Metadata {
  "_commentID": undefined,
  "_tag": "v250-rc1",
  "issueNumber": 0,
}
`;

exports[`Pull Request Object > isFreezed() 1`] = `false`;

exports[`Pull Request Object > isFreezed() 2`] = `false`;

exports[`Pull Request Object > isFreezed() 3`] = `false`;

exports[`Pull Request Object > isFreezed() 4`] = `true`;

exports[`Pull Request Object > isFreezed() 5`] = `false`;

exports[`Pull Request Object > isFreezed() 6`] = `false`;

exports[`Pull Request Object > isFreezed() 7`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 1`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 2`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 3`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 4`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 5`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 6`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 7`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 8`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 9`] = `true`;

exports[`Pull Request Object > isTagPolicyCompliant() 10`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 11`] = `true`;

exports[`Pull Request Object > isTagPolicyCompliant() 12`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 13`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 14`] = `true`;
